# openfodder

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  BUGS.md  CMakeLists.txt  CNAME  COMPILING.md  CONTRIBUTING.md  COPYING.BSD.txt  COPYING.LGPL.txt  COPYING.LGPLv2.1.txt  COPYING.MIT.txt  COPYING.ZLIB.txt  EMakefile  IDEAS.md  INSTALL.md  Makefile  README.md  _config.yml  appveyor.yml  index.html  index.md  openfodder.ini.example  params.json  rev.1  rev.cmd  rev.sh  vcpkg-configuration.json  vcpkg.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: linux-build.yml  windows-build.yml
FreeDesktop/: openfodder.appdata.xml  openfodder.desktop
Projects/: OpenFodder.aps  OpenFodder.rc  build_vs.cmd
Projects/VS2013/: OpenFodder.vcxproj  OpenFodder.vcxproj.filters  packages.config
Projects/VS2015/: OpenFodder.sln  OpenFodder.vcxproj  OpenFodder.vcxproj.filters  gitver.cmd  packages.config
Projects/VS2017/: OpenFodder.aps  OpenFodder.rc  OpenFodder.sln  OpenFodder.vcxproj  OpenFodder.vcxproj.filters  gitver.cmd  openfodder.ini  packages.config  resource.h
Projects/WinInstaller/: build.cmd  installer.nsi  openfodder.ini
Projects/emscripten/: build_emscripten.cmd  httpd.conf  openfodder.ini
Run/Data/AmigaFormat_XMAS/: AFXBASE.BLK  AFXBASE.INS  AFXBASE.SNG  AFXSUB0.BLK  afxarmy.lbm  afxbase.bht  afxbase.hit  afxbase.pal  afxbase.swp  afxcopt.lbm  afxsub0.bht  afxsub0.hit  afxsub0.swp  apmenu.lbm  mapm1.map  mapm1.spt  mapm2.map  mapm2.spt  pstuff.lbm
Run/Data/Custom/: Segras First.map  Segras First.spt
Run/Data/Custom/Sets/: segras.of
Run/Data/Custom/Sets/segras/: alessandro.map  alessandro.spt
Run/Data/Plus/: 1.lbm  10.lbm  11.lbm  2.lbm  3.lbm  4.lbm  5.lbm  6.lbm  7.lbm  8.lbm  9.lbm  apmenu.lbm  junarmy.lbm  junbase.bht  junbase.blk  junbase.hit  junbase.ins  junbase.pal  junbase.sng  junbase.swp  juncopt.lbm  junsub1.bht  junsub1.blk  junsub1.hit  junsub1.swp  mapm1.map  mapm1.spt  mapm2.map  mapm2.spt  mapm3.spt  mapm4.map  mapm4.spt  pstuff.lbm
Source/: .gitignore  About.cpp  About.hpp  Briefing.cpp  Camera.cpp  Campaign.cpp  Campaign.hpp  CampaignSelect.cpp  CopyProtection.cpp  CopyProtection.hpp  Debugger.cpp  Debugger.hpp  Dimension.hpp  Event.cpp  Event.hpp  Fodder.cpp  Fodder.hpp  FontData.cpp  FontData.hpp  GUI.cpp  GUI_Element.cpp  GUI_Element.hpp  GameData.cpp  GameData.hpp  Graphics.cpp  Graphics.hpp  Image.cpp  Intro.cpp  IntroData.hpp  KeyboardShortcuts.cpp  KeyboardShortcuts.hpp  Map.cpp  Map.hpp  MapData.cpp  MapNames.hpp  MissionData.cpp  MissionData.hpp  MissionNames.hpp  Mouse.cpp  OptionsMenu.cpp  (+49 more)
Source/Amiga/: Graphics_Amiga.cpp  Graphics_Amiga.hpp  Graphics_Amiga2.cpp  Graphics_Amiga2.hpp  IntroData_Amiga.cpp  Resource_Amiga_File.cpp  Resource_Amiga_File.hpp  Sound_Amiga.cpp  Sound_Amiga.hpp  SpriteData_Amiga.hpp  audiostream.hpp  dernc.cpp  dernc.hpp  paula.cpp  paula.hpp  rjp1.cpp  rjp1.hpp
Source/Map/: Map.cpp  Map.hpp  MapData.cpp  MapData.hpp  MapRuntime.cpp  Original.cpp  Original.hpp  Random.cpp  Random.hpp
Source/MissionData/: Custom.cpp  Demo.cpp  Retail.cpp  Retail2.cpp
Source/Network/: FodderMultiplayer.cpp  FodderMultiplayer.hpp  Fodder_Network.cpp  GGPOSession.cpp  GGPOSession.hpp  MultiplayerMenu.cpp  MultiplayerMenu.hpp  NetworkLobby.cpp  NetworkLobby.hpp  NetworkTypes.hpp
Source/PC/: Graphics_PC.cpp  Graphics_PC.hpp  IntroData_PC.cpp  Resource_PC_CD.cpp  Resource_PC_CD.hpp  Sound_PC.cpp  Sound_PC.hpp  Sound_PC2.cpp  Sound_PC2.hpp  SpriteData_PC.hpp  VocTable.hpp
Source/Sprites/: Sprite_Civilian.cpp  Sprite_Core.cpp  Sprite_Effects.cpp  Sprite_Helicopter.cpp  Sprite_Projectiles.cpp  Sprite_Troop.cpp  Sprite_Vehicle.cpp
Source/Structures/: Barracks.cpp  Barracks.hpp
Source/Utils/: SimplexIslands.cpp  SimplexIslands.hpp  SimplexNoise.cpp  SimplexNoise.hpp  diamondsquare.hpp  duk_config.h  duk_trans_socket_windows.cpp  duktape.cpp  ini.hpp  json.hpp  md5.hpp  micropather.cpp  micropather.h  pseudorand.hpp
Source/Utils/dukglue/: detail_class_proto.h  detail_primitive_types.h  detail_refs.h  detail_stack.h  detail_traits.h  detail_types.h  dukvalue.h  public_util.h
assets/: main.css  main.js
cmake/: FindFFmpeg.cmake  FindSDL2Mixer.cmake  gitver.hpp.in  sdl3_mixer_compat.h
installer/: revInst.1
project/vs10/: openFodder.sln  openFodder.vcxproj  openFodder.vcxproj.filters
src/: fodder.cpp  fodder.hpp  map.cpp  map.hpp  mission.cpp  mission.hpp  resources.cpp  resources.hpp  screen.cpp  screen.hpp  stdafx.cpp  stdafx.h  tiles.cpp  tiles.hpp  types.hpp
src/graphics/: surface.cpp  surface.hpp  window.cpp  window.h
src/graphics/scale/: scale2x.cpp  scale2x.h  scale3x.cpp  scalebit.cpp
